cmake_minimum_required(VERSION 3.26)
project(netflow-v8 C)

message(${CMAKE_SOURCE_DIR})
message(${PROJECT_SOURCE_DIR})
#find_library(LIBCRYPTO crypto)
#message(${LIBCRYPTO})
#link_libraries(${LIBCRYPTO})
#find_library(LIBPCRE28 pcre2-8)
#message(${LIBPCRE28})
#link_libraries(${LIBPCRE28})
#find_library(LIBLZ4 lz4)
#message(${LIBLZ4})
#link_libraries(${LIBLZ4})
#find_library(RDKAFKA rdkafka)
#message(${RDKAFKA})
#link_libraries(${RDKAFKA})
#include_directories(/opt/homebrew/Cellar/pcre2/10.40/include)

find_library(LIBNET net)
message(${LIBNET})
link_libraries(${LIBNET})
include_directories(/usr/local/include)
add_executable(netflow-v8 main.c
        nfv8.h)